# my-scrapers

./: .gitignore  pyproject.toml  requirements.txt  runner.py
.github/workflows/: _reusable_scrape.yml  finn_daily.yml
scrapers/: __init__.py  finn.py
